# effortless

./: .gitignore  CMakeLists.txt  Icon.qml  Main.qml  main.cpp  qml.qrc
.github/workflows/: cmake-multi-platform.yml
src/app/: DroppableRect.qml  ElementList.qml  Main.qml  main.cpp
src/app/sidebar/left/: Icon.qml  SidebarLeft.qml  SidebarLeftPanel.qml  icons.qrc
